Swap fignos and citeproc to avoid compiling errors

--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -3,6 +3,6 @@ TEMPLATE=template
 OUTDIR=../4-versions
 
 all:
-	pandoc $(FILE).md --filter pandoc-citeproc --filter pandoc-fignos --reference-doc=$(TEMPLATE).odt -o $(OUTDIR)/$(FILE).odt
-	pandoc $(FILE).md --filter pandoc-citeproc --filter pandoc-fignos --reference-doc=$(TEMPLATE).docx -o $(OUTDIR)/$(FILE).docx
-	pandoc $(FILE).md --filter pandoc-citeproc --filter pandoc-fignos --pdf-engine=xelatex -o $(OUTDIR)/$(FILE).pdf
+	pandoc $(FILE).md --filter pandoc-fignos --filter pandoc-citeproc --reference-doc=$(TEMPLATE).odt -o $(OUTDIR)/$(FILE).odt
+	pandoc $(FILE).md --filter pandoc-fignos --filter pandoc-citeproc --reference-doc=$(TEMPLATE).docx -o $(OUTDIR)/$(FILE).docx
+	pandoc $(FILE).md --filter pandoc-fignos --filter pandoc-citeproc --pdf-engine=xelatex -o $(OUTDIR)/$(FILE).pdf
