--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -5,4 +5,4 @@ OUTDIR=../4-versions
 all:
 	pandoc $(FILE).md --filter pandoc-fignos --filter pandoc-citeproc --reference-doc=$(TEMPLATE).odt -o $(OUTDIR)/$(FILE).odt
 	pandoc $(FILE).md --filter pandoc-fignos --filter pandoc-citeproc --reference-doc=$(TEMPLATE).docx -o $(OUTDIR)/$(FILE).docx
-	pandoc $(FILE).md --filter pandoc-fignos --filter pandoc-citeproc --pdf-engine=xelatex -o $(OUTDIR)/$(FILE).pdf
+	pandoc $(FILE).md --filter pandoc-fignos --filter pandoc-citeproc --pdf-engine=pdflatex -o $(OUTDIR)/$(FILE).pdf
