Adds last figure with wildtype analyses

--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -32,8 +32,9 @@ linkimg:
 	ln -s ${FIGUREIN}/mutant-analyses/figure.png ${FIGUREOUT}/Fig4.png
 	#ln -s ${FIGUREIN}/mutant-cauterizations/figure.png ${FIGUREOUT}/Fig6.png
 	#ln -s ${FIGUREIN}/double-mutants/figure.png ${FIGUREOUT}/Fig7.png
-	ln -s ${FIGUREIN}/wildtype-cauterizations/figure.png ${FIGUREOUT}/Fig8.png
-	ln -s ${FIGUREIN}/summary/figure.png ${FIGUREOUT}/Fig9.png
+	#ln -s ${FIGUREIN}/wildtype-cauterizations/figure.png ${FIGUREOUT}/Fig8.png
+	ln -s ${FIGUREIN}/wildtype-analyses/figure.png ${FIGUREOUT}/Fig5.png
+	#ln -s ${FIGUREIN}/summary/figure.png ${FIGUREOUT}/Fig9.png
 	# Supplementary
 	ln -s ${FIGUREIN}/initiator-behavior/figure.png ${FIGUREOUT}/FigS1.png
 	ln -s ${FIGUREIN}/stg-mutants/figure.png ${FIGUREOUT}/FigS2.png
